--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ theme:
     - navigation.expand
     - search.suggest
     - search.highlight
+    - search.share
+    - content.code.copy
   palette:
     - scheme: default
       primary: indigo
@@ -54,7 +56,9 @@ markdown_extensions:
       permalink: true
 
 plugins:
-  - search
+  - search:
+      lang: en
+      separator: '[\s\-,:!=\[\]()"/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - git-revision-date-localized:
       enable_creation_date: true
   - minify:
