update header theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,7 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
-    - navigation.sections
-    - navigation.expand
+    - navigation.tabs.sticky
     - search.suggest
     - search.highlight
     - search.share
